ui: implement sticky header and improve entry list visibility
- Added a sticky header for the Save and Finalize buttons to improve accessibility during long scrolls.
- Reordered the entry table to show the most relevant/recent items at the top.
- Fixed an issue with form data alignment by adding hidden inputs for already entered items.
- Removed the temporary Update button to maintain data stability during testing.
- Adjusted layout by hiding the main header for a cleaner data entry view.